// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FullCard component should contain .wrapper  1`] = `
<Fragment>
  <div
    className="wrapper"
  >
    <div
      className="photoWrapper"
    >
      <img
        alt="Walter White"
        className="photo"
        src="https://images.amcnetworks.com/amc.com/wp-content/uploads/2015/04/cast_bb_700x1000_walter-white-lg.jpg"
      />
    </div>
    <div
      className="info"
    >
      <div
        className="status"
      >
        Presumed dead
      </div>
      <div
        className="name"
      >
        Walter White
      </div>
      <div
        className="birthday"
      >
        <span
          className="lightText"
        >
          Date of birth: 
        </span>
        09-07-1958
      </div>
      <div
        className="nickName"
      >
        <span
          className="lightText"
        >
          Nickname: 
        </span>
        Heisenberg
      </div>
      <div
        className="quote"
      >
        <span
          className="lightText"
        >
          Quote: 
        </span>
        test
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render FullCard component with ErrorMessage should contain ErrorMessage  1`] = `
<Fragment>
  <ErrorMessage
    messege="Person not found"
  />
</Fragment>
`;

exports[`should render FullCard component with Loader should contain Loader  1`] = `
<Fragment>
  <Loader />
</Fragment>
`;

exports[`should render FullCard component with randomQuote should contain randomQuote  1`] = `
<Fragment>
  <div
    className="wrapper"
  >
    <div
      className="photoWrapper"
    >
      <img
        alt="Walter White"
        className="photo"
        src="https://images.amcnetworks.com/amc.com/wp-content/uploads/2015/04/cast_bb_700x1000_walter-white-lg.jpg"
      />
    </div>
    <div
      className="info"
    >
      <div
        className="status"
      >
        Presumed dead
      </div>
      <div
        className="name"
      >
        Walter White
      </div>
      <div
        className="birthday"
      >
        <span
          className="lightText"
        >
          Date of birth: 
        </span>
        09-07-1958
      </div>
      <div
        className="nickName"
      >
        <span
          className="lightText"
        >
          Nickname: 
        </span>
        Heisenberg
      </div>
      <div
        className="quote"
      >
        <span
          className="lightText"
        >
          Quote: 
        </span>
        test
      </div>
    </div>
  </div>
</Fragment>
`;
